# mintwatch

./: LICENSE  README.md
.github/workflows/: main.yml  release.yml
example/: docker-compose.yml
example/bot/: Dockerfile  config.toml
src/: .dockerignore  Dockerfile  config.toml  config_loader.py  main.py  pyproject.toml  setup.cfg
src/config/: __init__.py  config_loader.py  models.py
src/log_formatter/: __init__.py  formatter.py  response.py
src/telegram/: __init__.py  bot.py
src/watcher/: __init__.py  utils.py  watcher.py
