[tool.poetry]
name = "mintwatch"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <rdmingazov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"
loguru = "^0.6.0"
requests = "^2.27.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
isort = "5.6.4"
black = "19.10b0"
flake8-polyfill = "1.0.2"
flake8 = "^4.0.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
